// Vitest Snapshot v1

exports[`MtStepItemHint > Default position is top 1`] = `
<div
  class="mt-step-item-hint mt-step-item-hint--top"
  style="top: 0px; left: 0px;"
>
  something
</div>
`;

exports[`MtStepItemHint > Renders correctly 1`] = `
<div
  class="mt-step-item-hint mt-step-item-hint--top"
  style="top: 0px; left: 0px;"
/>
`;

exports[`MtStepItemHint > position props is optional, default is top 1`] = `
<div
  class="mt-step-item-hint mt-step-item-hint--top"
  style="top: 0px; left: 0px;"
>
  something
</div>
`;

exports[`MtStepItemHint > props.hint.position is optional, default is top 1`] = `
<div
  class="mt-step-item-hint mt-step-item-hint--top"
  style="top: 0px; left: 0px;"
>
  something
</div>
`;

exports[`MtStepItemHint > render correct className with props.hint.position 1`] = `
<div
  class="mt-step-item-hint mt-step-item-hint--top"
  style="top: 0px; left: 0px;"
>
  something
</div>
`;

exports[`MtStepItemHint > render correct className with props.hint.position 2`] = `
<div
  class="mt-step-item-hint mt-step-item-hint--right"
  style="top: 0px; left: 0px;"
>
  something
</div>
`;

exports[`MtStepItemHint > render correct className with props.hint.position 3`] = `
<div
  class="mt-step-item-hint mt-step-item-hint--bottom"
  style="top: 0px; left: 0px;"
>
  something
</div>
`;

exports[`MtStepItemHint > render correct className with props.hint.position 4`] = `
<div
  class="mt-step-item-hint mt-step-item-hint--left"
  style="top: 0px; left: 0px;"
>
  something
</div>
`;

exports[`MtStepItemHint > render correct className with props.hint.position bottom 1`] = `
<div
  class="mt-step-item-hint mt-step-item-hint--bottom"
  style="top: 0px; left: 0px;"
>
  something
</div>
`;

exports[`MtStepItemHint > render correct className with props.hint.position left 1`] = `
<div
  class="mt-step-item-hint mt-step-item-hint--left"
  style="top: 0px; left: 0px;"
>
  something
</div>
`;

exports[`MtStepItemHint > render correct className with props.hint.position right 1`] = `
<div
  class="mt-step-item-hint mt-step-item-hint--right"
  style="top: 0px; left: 0px;"
>
  something
</div>
`;

exports[`MtStepItemHint > render correct className with props.hint.position top 1`] = `
<div
  class="mt-step-item-hint mt-step-item-hint--top"
  style="top: 0px; left: 0px;"
>
  something
</div>
`;
